[package]
name = "ogp_image_generator"
version = "1.0.0"
edition = "2021"
authors = ["block <block.cube.lib@gmail.com"]

[dependencies]
anyhow = "1.0.56"
aws-config = "0.9.0"
aws-sdk-s3 = "0.9.0"
aws-types = "0.9.0"
base64 = "0.13.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
image = "0.23.6"
imageproc = "0.22.0"
lambda_http = "0.5.1"
lindera = { version = "0.12.0", features = ["ipadic"] }
log = "0.4.16"
once_cell = "1.10.0"
reqwest = { version = "0.11.10", default-features = false, features = ["rustls-tls"] }
rusttype = "0.9.2"
select = "0.5.0"
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
