[package]
name = "og_image_generator"
version = "1.0.0"
edition = "2021"
authors = ["block <block.cube.lib@gmail.com"]

[dependencies]
anyhow = "1.0.56"
aws-config = "0.9.0"
aws-sdk-s3 = "0.9.0"
aws-types = "0.9.0"
axum = "0.6.1"
base64 = "0.13.0"
data-encoding = "2.3.3"
dotenv = "0.15.0"
easy-scraper = "0.2.0"
env_logger = "0.9.0"
image = "0.24.5"
imageproc = "0.23.0"
lambda_http = "0.5.1"
lindera = { version = "0.19.4", features = ["ipadic"] }
log = "0.4.16"
once_cell = "1.10.0"
reqwest = { version = "0.11.10", default-features = false, features = ["rustls-tls"] }
rusttype = "0.9.2"
select = "0.5.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.79"
sha2 = "0.10.6"
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
